examples/test/testpolicy10839.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10839
  namespace: namespace273
spec:
  podSelector:
    matchLabels:
      key31: value5
      key45: value48
      key43: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value42
          key7: value18
      podSelector:
        matchLabels:
          key45: value29
          key6: value7
